# mecc

./: .gitignore  CMakeLists.txt
src/: lexer.c  lexer.h  main.c  options.h  utility.h
